Updates (#1)
* updated to jdk17 and fixed most warnings; added some GH Actions